# lep100

./: .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apps/docs/: package.json
apps/docs/docs/lep/lep100/: lep100-3-budget-cost.md  lep100-4-receipts.md
apps/docs/scripts/: dev.js
apps/examples/zk-required-contract/contracts/: ZkRequiredExample.lithic
docs/: README.md  REPO_STRUCTURE.md  index.md  lep100-1.md  lep100-10.md  lep100-11.md  lep100-12.md  lep100-13.md  lep100-14.md  lep100-2.md  lep100-3.md  lep100-4.md  lep100-5.md  lep100-6.md  lep100-7.md  lep100-8.md  lep100-9.md  mkdocs.yml
docs/lep100-1/: LEP100-1.md
docs/lep100-10/: LEP100-10.md
docs/lep100-11/: LEP100-11.md
docs/lep100-12/: LEP100-12.md
docs/lep100-13/: LEP100-13.md
docs/lep100-14/: LEP100-14.md
docs/lep100-2/: LEP100-2.md
docs/lep100-3/: LEP100-3.md
docs/lep100-4/: LEP100-4.md
docs/lep100-5/: LEP100-5.md
docs/lep100-6/: LEP100-6.md
docs/lep100-7/: LEP100-7.md
docs/lep100-8/: LEP100-8.md
docs/lep100-9/: LEP100-9.md
lithic/: README.md  SECURITY.md
lithic/apps/docs/docs/: REPO_STRUCTURE.md
lithic/apps/docs/docs/lep/lep100/: lep100-1-lithic-core.md  lep100-2-ai-provider.md  lep100-5-zk-ai.md
lithic/tools/scripts/: bootstrap.sh  build-all.sh
lscl/: README.md
rust/: Cargo.toml
rust/crates/lep100-abi/: Cargo.toml
rust/crates/lep100-abi/src/: lib.rs
rust/crates/lep100-cli/: Cargo.toml
rust/crates/lep100-cli/src/: main.rs
rust/crates/lep100-conformance/: Cargo.toml
rust/crates/lep100-conformance/src/: lib.rs
rust/crates/lep100-core/: Cargo.toml
rust/crates/lep100-core/src/: lib.rs
scripts/: run-lithic-tests.sh  run-mkdocs.sh
specs/: TEMPLATE.md
specs/lep100-01/: README.md
specs/lep100-02/: README.md
specs/lep100-03/: README.md
specs/lep100-04/: README.md
specs/lep100-05/: README.md
specs/lep100-06/: README.md
specs/lep100-07/: README.md
specs/lep100-08/: README.md
specs/lep100-09/: README.md
specs/lep100-10/: README.md
specs/lep100-11/: README.md
specs/lep100-12/: README.md
specs/lep100-13/: README.md
specs/lep100-14/: README.md
tests/: README.md
tests/lep100-tests/: README.md
tools/scripts/: lint-all.sh  test-all.sh
