[package]
name = "lep100-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LEP100 ABI encoding/decoding utilities (starter)"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
