[package]
name = "lep100"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LEP100 CLI (starter)"

[[bin]]
name = "lep100"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
lep100-core = { path = "../lep100-core" }
lep100-conformance = { path = "../lep100-conformance" }

[features]
default = []
zk = ["lep100-conformance/zk"]
bridge = ["lep100-conformance/bridge"]
ppal = ["lep100-conformance/ppal"]
