[package]
name = "lep100-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core primitives for LEP100 (hashing, receipts, deterministic encoding)"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
zk = []
bridge = []
ppal = []
